<resources>
    <string name="app_name">SmartTodo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_todo_list">TodoListActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_todo_detail">TodoDetailActivity</string>
    <string name="title_activity_time_picker">TimePickerActivity</string>
    <string name="title_activity_date_picker">DatePickerActivity</string>
    <string name="title_activity_todo_add">TodoAddActivity</string>
    <string name="today_title">今天</string>
    <string name="later_title">将来</string>
    <string name="done_title">完成</string>
    <string name="title_hint">要做什么呢？</string>
    <string name="alert_date_hint">提醒日期</string>
    <string name="repeat_hint">重复</string>
    <string name="tag_hint">分类标签</string>
    <string name="note_hint">备注</string>
    <string name="confirm">确认</string>
    <string name="delete">删除</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_float_window">悬浮窗</string>
    <string name="settings_float_windows_key">FloatWindow</string>
    <string name="settings_copy_listener">复制操作监听</string>
    <string name="settings_copy_listener_key">CopyListener</string>
</resources>
