<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    tools:context="com.liwshuo.smarttodo.activity.TodoDetailActivity">
    <LinearLayout
        android:id="@+id/todoDetailLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:text="todo"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="24dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/todoTitleImage"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:src="@drawable/title"/>
            <EditText
                android:id="@+id/todoTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#000000"
                android:hint="@string/title_hint"
                android:gravity="center_vertical"
                android:textColorHint="#999999"
                android:background="@drawable/edittext"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="24dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/todoDateImage"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:src="@drawable/date"/>
            <TextView
                android:id="@+id/todoDateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/alert_date_hint"
                android:textSize="16sp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="24dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/todoRepeatImage"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:src="@drawable/repeat"/>
            <TextView
                android:id="@+id/todoRepeatText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repeat_hint"
                android:textSize="16sp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="24dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/todoTagImage"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:src="@drawable/tag"/>
            <TextView
                android:id="@+id/todoTagText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tag_hint"
                android:textSize="16sp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="24dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/todoContentImage"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:src="@drawable/note"/>
            <EditText
                android:id="@+id/todoNoteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:textSize="18sp"
                android:textColor="#000000"
                android:hint="@string/note_hint"
                android:textColorHint="#999999"
                android:background="@drawable/edittext"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="24dp"/>
    </LinearLayout>


    <TextView
        android:id="@+id/confirmTodo"
        android:layout_below="@+id/todoDetailLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/confirm"
        android:textSize="24sp"/>
</RelativeLayout>
